--- a/imports/ui/login.html
+++ b/imports/ui/login.html
@@ -90,7 +90,8 @@
                     <div class="col-xs-4">
                     </div>
                     <div class="col-xs-6">
-                        <input type="submit" style="font-size:16pt;height:50px;width:450px;" placeholder="Login">
+                        <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="loginButton">
+
                     </div>
                     <div class="col-xs-2">
                     </div>
