--- a/imports/ui/register.html
+++ b/imports/ui/register.html
@@ -1,6 +1,6 @@
 <template name="register">
     <div class="loginForm">
-        {{> atForm}}
+        <!--{{> atForm}}-->
         <form class="login">
 
             <div class="row">
@@ -34,7 +34,7 @@
                 <div class="col-xs-4">
                 </div>
                 <div class="col-xs-6">
-                    <input type="submit" style="font-size:16pt;height:50px;width:450px;" placeholder="Create Account">
+                    <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="registerButton">
                 </div>
                 <div class="col-xs-2">
                 </div>
