Working on homepage

--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,6 @@
-<head>
-    <title>Eager Academy</title>
-</head>
+<!--<head>-->
+    <!--<title>Eager Academy</title>-->
+<!--</head>-->
 <!--<template name="RegisterLayout">-->
     <!--<head>-->
         <!--<title>Eager Academy - Register Account</title>-->
