--- a/imports/ui/login.html
+++ b/imports/ui/login.html
@@ -22,97 +22,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <main>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
-                <div class="row top-buffer"></div>
+    <div class="container">
+        <div class="row">
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
+            <div class="row top-buffer"></div>
 
-                <div class="col-xs-2"></div>
+            <div class="col-xs-2"></div>
 
-                <div class="col-xs-8">
-                    <header>
-                        <h1>
-                            Login to your Eager Academy Account
-                        </h1>
-                    </header>
-                </div>
-
-                <div class="col-xs-2"></div>
+            <div class="col-xs-8">
+                <header>
+                    <h1>
+                        Login to your Eager Academy Account
+                    </h1>
+                </header>
             </div>
 
+            <div class="col-xs-2"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-xs-12">
+                <hr>
+            </div>
+        </div>
+
+        <form class="loginForm" id="loginForm">
+
             <div class="row">
-                <div class="col-xs-12">
-                    <hr>
+                <div class="col-xs-4">
+
+                </div>
+                <div class="col-xs-6">
+                    <input type="text" name="username" placeholder="username/email"
+                           style="font-size:16pt;height:50px;width:450px;">
+                </div>
+                <div class="col-xs-2">
                 </div>
             </div>
-
-            <form class="loginForm" id="loginForm">
-
-                <div class="row">
-                    <div class="col-xs-4">
-
-                    </div>
-                    <div class="col-xs-6">
-                        <input type="text" name="username" placeholder="username/email"
-                               style="font-size:16pt;height:50px;width:450px;">
-                    </div>
-                    <div class="col-xs-2">
-                    </div>
-                </div>
-
-                <div class="row top-buffer"></div>
-
-                <div class="row">
-                    <div class="col-xs-4">
-                    </div>
-                    <div class="col-xs-6">
-                        <input type="password" name="password" placeholder="password"
-                               style="font-size:16pt;height:50px;width:450px;">
-                    </div>
-                    <div class="col-xs-2">
-                    </div>
-                </div>
-
-                <div class="row top-buffer"></div>
-
-                <div class="row">
-                    <div class="col-xs-4">
-                    </div>
-                    <div class="col-xs-6">
-                        <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="loginButton">
-
-                    </div>
-                    <div class="col-xs-2">
-                    </div>
-                </div>
-
-            </form>
 
             <div class="row top-buffer"></div>
 
             <div class="row">
                 <div class="col-xs-4">
                 </div>
-                <div class="col-xs-2"><input type="checkbox">Remember Me</div>
-                <div class="col-xs-2 text-right">
-                    <a href="/forgot"><u>Forgot Password?</u></a>
+                <div class="col-xs-6">
+                    <input type="password" name="password" placeholder="password"
+                           style="font-size:16pt;height:50px;width:450px;">
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-2">
                 </div>
             </div>
-        </div>
 
-    </main>
+            <div class="row top-buffer"></div>
+
+            <div class="row">
+                <div class="col-xs-4">
+                </div>
+                <div class="col-xs-6">
+                    <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="loginButton">
+
+                </div>
+                <div class="col-xs-2">
+                </div>
+            </div>
+
+        </form>
+
+        <div class="row top-buffer"></div>
+
+        <div class="row">
+            <div class="col-xs-4">
+            </div>
+            <div class="col-xs-2"><input type="checkbox">Remember Me</div>
+            <div class="col-xs-2 text-right">
+                <a href="/forgot"><u>Forgot Password?</u></a>
+            </div>
+            <div class="col-xs-4">
+            </div>
+        </div>
+    </div>
+
 
 </template>
