Added Part of Nav Bar

--- a/imports/ui/home.html
+++ b/imports/ui/home.html
@@ -15,9 +15,27 @@
                 </button>
 
                 <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="../../public/images/EA_Logo.svg">
+                    <img alt="Brand" src="../../public/images/EA_Logo.png">
                 </a>
             </div>
+
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="navbar-text"><span class="glyphicon glyphicon-bell"></span></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">John<b
+                                class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li class="main-nav-link"><a href="teacher-edit-info.html"><span class="glyphicon glyphicon-wrench"></span><span class="navbar-right">Settings</span></a></li>
+                            <li class="main-nav-link"><a href="teacher-edit-info.html"><span class="glyphicon glyphicon-log-out"></span><span class="navbar-right">Logout</span></a></li>
+                        </ul>
+                    </li>
+                    <li><div class="navbar-text">Sun. Dec. 25, 2016</div></li>
+                </ul>
+
+            </div>
+
+
         </div>
     </div>
     <div class="container">
