--- a/imports/ui/home.html
+++ b/imports/ui/home.html
@@ -5,10 +5,12 @@
         </title>
     </head>
 
+    <!--<div class="row">-->
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -26,11 +28,23 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">John<b
                                 class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li class="main-nav-link"><a href="teacher-edit-info.html"><span class="glyphicon glyphicon-wrench"></span><span class="navbar-right">Settings</span></a></li>
-                            <li class="main-nav-link"><a href="teacher-edit-info.html"><span class="glyphicon glyphicon-log-out"></span><span class="navbar-right">Logout</span></a></li>
+                            <li class="main-nav-link">
+                                <a href="teacher-edit-info.html">
+                                    <span class="glyphicon glyphicon-wrench">
+                                    </span>
+                                    <span
+                                            class="navbar-right">Settings
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="main-nav-link"><a href="teacher-edit-info.html"><span
+                                    class="glyphicon glyphicon-log-out"></span><span
+                                    class="navbar-right">Logout</span></a></li>
                         </ul>
                     </li>
-                    <li><div class="navbar-text">Sun. Dec. 25, 2016</div></li>
+                    <li>
+                        <div class="navbar-text">Sun. Dec. 25, 2016</div>
+                    </li>
                 </ul>
 
             </div>
@@ -38,155 +52,244 @@
 
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-5">
+    <!--</div>-->
 
+
+    <div class="navbar"></div>
+    <body>
+    <div class="container-fluid">
+
+
+        <div class="row">
+            <div class="col-sm-1">
+                <ul>
+                    <li class="homeIcon">
+                        <a href="/thankyou">
+                            <span class="glyphicon glyphicon-home"></span>
+                        </a>
+                    </li>
+
+                    <li class="homeIcon">
+                        <a href="/thankyou">
+                            <span class="glyphicon glyphicon-time"></span>
+                        </a>
+                    </li>
+
+                    <li class="homeIcon">
+                        <a href="/thankyou">
+                            <span class="glyphicon glyphicon-file"></span>
+                        </a>
+                    </li>
+
+                    <li class="homeIcon">
+                        <a href="/thankyou">
+                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
+            <div class="col-sm-7">
+                <div class="row">
+                    <h1>
+                        Welcome back, John!
+                    </h1>
+                </div>
+
+                <div class="row">
+                    <h3>
+                        Here's an overview of how you're doing!
+                    </h3>
+                </div>
+
+                <div class="row"></div>
+
+                <div class="col-sm-3">
+                    <div class="homeworkPanel row">
+                        <b>Homework Due Soon</b>
+                    </div>
+
+                    <div class="homeworkPanel row">
+                        <div class="col-sm-2">
+                        <span class="glyphicon glyphicon-alert"></span>
+                        </div>
+
+                        <div class="col-sm-10">
+                            <div class="row">
+                                Vetors Project
+                            </div>
+
+                            <div class="row">
+                                <span class="glyphicon glyphicon-time"></span>
+                                Due Tomorrow
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="col-sm-1">
+                    <div class="row">
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="upcomingPanel row">
+                        Upcoming Quizzes/Tests
+                    </div>
+                </div>
+
+                <div class="col-sm-1">
+                    <div class="row">
+                    </div>
+                </div>
+
+                <div class="col-sm-3">
+                    <div class="pointPanel row">
+                        Your Current Points - 1500
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-
-
-
+    </body>
 
     <!--<style>-->
-        <!--/*  bhoechie tab */-->
-        <!--div.bhoechie-tab-container{-->
-            <!--z-index: 10;-->
-            <!--background-color: #ffffff;-->
-            <!--padding: 0 !important;-->
-            <!--border-radius: 4px;-->
-            <!---moz-border-radius: 4px;-->
-            <!--border:1px solid #ddd;-->
-            <!--margin-top: 20px;-->
-            <!--margin-left: 50px;-->
-            <!---webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);-->
-            <!--box-shadow: 0 6px 12px rgba(0,0,0,.175);-->
-            <!---moz-box-shadow: 0 6px 12px rgba(0,0,0,.175);-->
-            <!--background-clip: padding-box;-->
-            <!--opacity: 0.97;-->
-            <!--filter: alpha(opacity=97);-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu{-->
-            <!--padding-right: 0;-->
-            <!--padding-left: 0;-->
-            <!--padding-bottom: 0;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group{-->
-            <!--margin-bottom: 0;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group>a{-->
-            <!--margin-bottom: 0;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group>a .glyphicon,-->
-        <!--div.bhoechie-tab-menu div.list-group>a .fa {-->
-            <!--color: #5A55A3;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group>a:first-child{-->
-            <!--border-top-right-radius: 0;-->
-            <!---moz-border-top-right-radius: 0;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group>a:last-child{-->
-            <!--border-bottom-right-radius: 0;-->
-            <!---moz-border-bottom-right-radius: 0;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group>a.active,-->
-        <!--div.bhoechie-tab-menu div.list-group>a.active .glyphicon,-->
-        <!--div.bhoechie-tab-menu div.list-group>a.active .fa{-->
-            <!--background-color: #5A55A3;-->
-            <!--background-image: #5A55A3;-->
-            <!--color: #ffffff;-->
-        <!--}-->
-        <!--div.bhoechie-tab-menu div.list-group>a.active:after{-->
-            <!--content: '';-->
-            <!--position: absolute;-->
-            <!--left: 100%;-->
-            <!--top: 50%;-->
-            <!--margin-top: -13px;-->
-            <!--border-left: 0;-->
-            <!--border-bottom: 13px solid transparent;-->
-            <!--border-top: 13px solid transparent;-->
-            <!--border-left: 10px solid #5A55A3;-->
-        <!--}-->
+    <!--/*  bhoechie tab */-->
+    <!--div.bhoechie-tab-container{-->
+    <!--z-index: 10;-->
+    <!--background-color: #ffffff;-->
+    <!--padding: 0 !important;-->
+    <!--border-radius: 4px;-->
+    <!---moz-border-radius: 4px;-->
+    <!--border:1px solid #ddd;-->
+    <!--margin-top: 20px;-->
+    <!--margin-left: 50px;-->
+    <!---webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);-->
+    <!--box-shadow: 0 6px 12px rgba(0,0,0,.175);-->
+    <!---moz-box-shadow: 0 6px 12px rgba(0,0,0,.175);-->
+    <!--background-clip: padding-box;-->
+    <!--opacity: 0.97;-->
+    <!--filter: alpha(opacity=97);-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu{-->
+    <!--padding-right: 0;-->
+    <!--padding-left: 0;-->
+    <!--padding-bottom: 0;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group{-->
+    <!--margin-bottom: 0;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group>a{-->
+    <!--margin-bottom: 0;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group>a .glyphicon,-->
+    <!--div.bhoechie-tab-menu div.list-group>a .fa {-->
+    <!--color: #5A55A3;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group>a:first-child{-->
+    <!--border-top-right-radius: 0;-->
+    <!---moz-border-top-right-radius: 0;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group>a:last-child{-->
+    <!--border-bottom-right-radius: 0;-->
+    <!---moz-border-bottom-right-radius: 0;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group>a.active,-->
+    <!--div.bhoechie-tab-menu div.list-group>a.active .glyphicon,-->
+    <!--div.bhoechie-tab-menu div.list-group>a.active .fa{-->
+    <!--background-color: #5A55A3;-->
+    <!--background-image: #5A55A3;-->
+    <!--color: #ffffff;-->
+    <!--}-->
+    <!--div.bhoechie-tab-menu div.list-group>a.active:after{-->
+    <!--content: '';-->
+    <!--position: absolute;-->
+    <!--left: 100%;-->
+    <!--top: 50%;-->
+    <!--margin-top: -13px;-->
+    <!--border-left: 0;-->
+    <!--border-bottom: 13px solid transparent;-->
+    <!--border-top: 13px solid transparent;-->
+    <!--border-left: 10px solid #5A55A3;-->
+    <!--}-->
 
-        <!--div.bhoechie-tab-content{-->
-            <!--background-color: #ffffff;-->
-            <!--/* border: 1px solid #eeeeee; */-->
-            <!--padding-left: 20px;-->
-            <!--padding-top: 10px;-->
-        <!--}-->
+    <!--div.bhoechie-tab-content{-->
+    <!--background-color: #ffffff;-->
+    <!--/* border: 1px solid #eeeeee; */-->
+    <!--padding-left: 20px;-->
+    <!--padding-top: 10px;-->
+    <!--}-->
 
-        <!--div.bhoechie-tab div.bhoechie-tab-content:not(.active){-->
-            <!--display: none;-->
-        <!--}-->
+    <!--div.bhoechie-tab div.bhoechie-tab-content:not(.active){-->
+    <!--display: none;-->
+    <!--}-->
     <!--</style>-->
 
     <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-lg-5 col-md-5 col-sm-8 col-xs-9 bhoechie-tab-container">-->
-                <!--<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">-->
-                    <!--<div class="list-group">-->
-                        <!--<a href="#" class="list-group-item active text-center">-->
-                            <!--<h4 class="glyphicon glyphicon-plane"></h4><br/>Flight-->
-                        <!--</a>-->
-                        <!--<a href="#" class="list-group-item text-center">-->
-                            <!--<h4 class="glyphicon glyphicon-road"></h4><br/>Train-->
-                        <!--</a>-->
-                        <!--<a href="#" class="list-group-item text-center">-->
-                            <!--<h4 class="glyphicon glyphicon-home"></h4><br/>Hotel-->
-                        <!--</a>-->
-                        <!--<a href="#" class="list-group-item text-center">-->
-                            <!--<h4 class="glyphicon glyphicon-cutlery"></h4><br/>Restaurant-->
-                        <!--</a>-->
-                        <!--<a href="#" class="list-group-item text-center">-->
-                            <!--<h4 class="glyphicon glyphicon-credit-card"></h4><br/>Credit Card-->
-                        <!--</a>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 bhoechie-tab">-->
-                    <!--&lt;!&ndash; flight section &ndash;&gt;-->
-                    <!--<div class="bhoechie-tab-content active">-->
-                        <!--<center>-->
-                            <!--<h1 class="glyphicon glyphicon-plane" style="font-size:14em;color:#55518a"></h1>-->
-                            <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
-                            <!--<h3 style="margin-top: 0;color:#55518a">Flight Reservation</h3>-->
-                        <!--</center>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash; train section &ndash;&gt;-->
-                    <!--<div class="bhoechie-tab-content">-->
-                        <!--<center>-->
-                            <!--<h1 class="glyphicon glyphicon-road" style="font-size:12em;color:#55518a"></h1>-->
-                            <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
-                            <!--<h3 style="margin-top: 0;color:#55518a">Train Reservation</h3>-->
-                        <!--</center>-->
-                    <!--</div>-->
+    <!--<div class="row">-->
+    <!--<div class="col-lg-5 col-md-5 col-sm-8 col-xs-9 bhoechie-tab-container">-->
+    <!--<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">-->
+    <!--<div class="list-group">-->
+    <!--<a href="#" class="list-group-item active text-center">-->
+    <!--<h4 class="glyphicon glyphicon-plane"></h4><br/>Flight-->
+    <!--</a>-->
+    <!--<a href="#" class="list-group-item text-center">-->
+    <!--<h4 class="glyphicon glyphicon-road"></h4><br/>Train-->
+    <!--</a>-->
+    <!--<a href="#" class="list-group-item text-center">-->
+    <!--<h4 class="glyphicon glyphicon-home"></h4><br/>Hotel-->
+    <!--</a>-->
+    <!--<a href="#" class="list-group-item text-center">-->
+    <!--<h4 class="glyphicon glyphicon-cutlery"></h4><br/>Restaurant-->
+    <!--</a>-->
+    <!--<a href="#" class="list-group-item text-center">-->
+    <!--<h4 class="glyphicon glyphicon-credit-card"></h4><br/>Credit Card-->
+    <!--</a>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 bhoechie-tab">-->
+    <!--&lt;!&ndash; flight section &ndash;&gt;-->
+    <!--<div class="bhoechie-tab-content active">-->
+    <!--<center>-->
+    <!--<h1 class="glyphicon glyphicon-plane" style="font-size:14em;color:#55518a"></h1>-->
+    <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
+    <!--<h3 style="margin-top: 0;color:#55518a">Flight Reservation</h3>-->
+    <!--</center>-->
+    <!--</div>-->
+    <!--&lt;!&ndash; train section &ndash;&gt;-->
+    <!--<div class="bhoechie-tab-content">-->
+    <!--<center>-->
+    <!--<h1 class="glyphicon glyphicon-road" style="font-size:12em;color:#55518a"></h1>-->
+    <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
+    <!--<h3 style="margin-top: 0;color:#55518a">Train Reservation</h3>-->
+    <!--</center>-->
+    <!--</div>-->
 
-                    <!--&lt;!&ndash; hotel search &ndash;&gt;-->
-                    <!--<div class="bhoechie-tab-content">-->
-                        <!--<center>-->
-                            <!--<h1 class="glyphicon glyphicon-home" style="font-size:12em;color:#55518a"></h1>-->
-                            <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
-                            <!--<h3 style="margin-top: 0;color:#55518a">Hotel Directory</h3>-->
-                        <!--</center>-->
-                    <!--</div>-->
-                    <!--<div class="bhoechie-tab-content">-->
-                        <!--<center>-->
-                            <!--<h1 class="glyphicon glyphicon-cutlery" style="font-size:12em;color:#55518a"></h1>-->
-                            <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
-                            <!--<h3 style="margin-top: 0;color:#55518a">Restaurant Diirectory</h3>-->
-                        <!--</center>-->
-                    <!--</div>-->
-                    <!--<div class="bhoechie-tab-content">-->
-                        <!--<center>-->
-                            <!--<h1 class="glyphicon glyphicon-credit-card" style="font-size:12em;color:#55518a"></h1>-->
-                            <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
-                            <!--<h3 style="margin-top: 0;color:#55518a">Credit Card</h3>-->
-                        <!--</center>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+    <!--&lt;!&ndash; hotel search &ndash;&gt;-->
+    <!--<div class="bhoechie-tab-content">-->
+    <!--<center>-->
+    <!--<h1 class="glyphicon glyphicon-home" style="font-size:12em;color:#55518a"></h1>-->
+    <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
+    <!--<h3 style="margin-top: 0;color:#55518a">Hotel Directory</h3>-->
+    <!--</center>-->
+    <!--</div>-->
+    <!--<div class="bhoechie-tab-content">-->
+    <!--<center>-->
+    <!--<h1 class="glyphicon glyphicon-cutlery" style="font-size:12em;color:#55518a"></h1>-->
+    <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
+    <!--<h3 style="margin-top: 0;color:#55518a">Restaurant Diirectory</h3>-->
+    <!--</center>-->
+    <!--</div>-->
+    <!--<div class="bhoechie-tab-content">-->
+    <!--<center>-->
+    <!--<h1 class="glyphicon glyphicon-credit-card" style="font-size:12em;color:#55518a"></h1>-->
+    <!--<h2 style="margin-top: 0;color:#55518a">Cooming Soon</h2>-->
+    <!--<h3 style="margin-top: 0;color:#55518a">Credit Card</h3>-->
+    <!--</center>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
     <!--</div>-->
 </template>
