--- a/imports/ui/home.html
+++ b/imports/ui/home.html
@@ -104,14 +104,46 @@
 
                 <div class="row"></div>
 
-                <div class="col-sm-3">
+                <div class="col-sm-4">
+
+                    <table class="homeworkTable">
+                        <tr>
+                            <th>
+                                <p class="homeworkTableHeader">
+                                    Homework Due Sooooooooooooooooooooooooooooooooooon
+                                </p>
+
+                            </th>
+                        </tr>
+                        <tr>
+                            <div class="col-sm-2">
+                                <span class="glyphicon glyphicon-alert"></span>
+                            </div>
+
+                            <div class="col-sm-10">
+                                <div class="row">
+                                    Vetors Project
+                                </div>
+
+                                <div class="row">
+                                    <span class="glyphicon glyphicon-exclamation-sign"></span>
+                                    Due Tomorrow
+                                </div>
+                            </div>
+                        </tr>
+                    </table>
+
+                    <div class="row">   sdfads</div>
+
+                    <div class="row">asdfa  </div>
+
                     <div class="homeworkPanel row">
                         <b>Homework Due Soon</b>
                     </div>
 
                     <div class="homeworkPanel row">
                         <div class="col-sm-2">
-                        <span class="glyphicon glyphicon-alert"></span>
+                            <span class="glyphicon glyphicon-alert"></span>
                         </div>
 
                         <div class="col-sm-10">
@@ -133,11 +165,11 @@
                     </div>
                 </div>
 
-                <div class="col-sm-3">
-                    <div class="upcomingPanel row">
-                        Upcoming Quizzes/Tests
-                    </div>
-                </div>
+                <!--<div class="col-sm-3">-->
+                    <!--<div class="upcomingPanel row">-->
+                        <!--Upcoming Quizzes/Tests-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div class="col-sm-1">
                     <div class="row">
