--- a/imports/ui/home.html
+++ b/imports/ui/home.html
@@ -5,64 +5,15 @@
         </title>
     </head>
 
-    <!--<div class="row">-->
-    <div class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="navbar-brand" href="#">
-                    <img alt="Brand" src="../../public/images/EA_Logo.png">
-                </a>
-            </div>
-
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="navbar-text"><span class="glyphicon glyphicon-bell"></span></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">John<b
-                                class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li class="main-nav-link">
-                                <a href="teacher-edit-info.html">
-                                    <span class="glyphicon glyphicon-wrench">
-                                    </span>
-                                    <span
-                                            class="navbar-right">Settings
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="main-nav-link"><a href="teacher-edit-info.html"><span
-                                    class="glyphicon glyphicon-log-out"></span><span
-                                    class="navbar-right">Logout</span></a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <div class="navbar-text">Sun. Dec. 25, 2016</div>
-                    </li>
-                </ul>
-
-            </div>
-
-
-        </div>
-    </div>
-    <!--</div>-->
-
-
-    <div class="navbar"></div>
-    <body>
     <div class="container-fluid">
-
-
         <div class="row">
-            <div class="col-sm-1">
+            <div class="col-sm-1 ">
                 <ul>
+                    <li class="eagerIcon">
+                        <a href="/home">
+                            <img alt="Brand" src="../../public/images/EagerLogo.png">
+                        </a>
+                    </li>
                     <li class="homeIcon">
                         <a href="/thankyou">
                             <span class="glyphicon glyphicon-home"></span>
@@ -88,103 +39,191 @@
                     </li>
                 </ul>
             </div>
+            <div class="col-sm-11">
+                <div class="navbar navbar-default eaNavbar">
+                    <!--<div class="container-fluid">-->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                data-target=".navbar-collapse">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
 
-            <div class="col-sm-7">
-                <div class="row">
-                    <h1>
-                        Welcome back, John!
-                    </h1>
-                </div>
-
-                <div class="row">
-                    <h3>
-                        Here's an overview of how you're doing!
-                    </h3>
-                </div>
-
-                <div class="row"></div>
-
-                <div class="col-sm-4">
-
-                    <table class="homeworkTable">
-                        <tr>
-                            <th>
-                                <p class="homeworkTableHeader">
-                                    Homework Due Sooooooooooooooooooooooooooooooooooon
-                                </p>
-
-                            </th>
-                        </tr>
-                        <tr>
-                            <div class="col-sm-2">
-                                <span class="glyphicon glyphicon-alert"></span>
-                            </div>
-
-                            <div class="col-sm-10">
-                                <div class="row">
-                                    Vetors Project
-                                </div>
-
-                                <div class="row">
-                                    <span class="glyphicon glyphicon-exclamation-sign"></span>
-                                    Due Tomorrow
-                                </div>
-                            </div>
-                        </tr>
-                    </table>
-
-                    <div class="row">   sdfads</div>
-
-                    <div class="row">asdfa  </div>
-
-                    <div class="homeworkPanel row">
-                        <b>Homework Due Soon</b>
+                        <!--<a class="navbar-brand" href="#">-->
+                            <!--<img alt="Brand" src="../../public/images/EA_Logo.png">-->
+                        <!--</a>-->
                     </div>
 
-                    <div class="homeworkPanel row">
-                        <div class="col-sm-2">
-                            <span class="glyphicon glyphicon-alert"></span>
-                        </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="navbar-text"><span class="glyphicon glyphicon-bell"></span></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">John<b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu">
+                                    <li class="main-nav-link">
+                                        <a href="teacher-edit-info.html">
+                                    <span class="glyphicon glyphicon-wrench">
+                                    </span>
+                                            <span
+                                                    class="navbar-right">Settings
+                                    </span>
+                                        </a>
+                                    </li>
+                                    <li class="main-nav-link"><a href="teacher-edit-info.html"><span
+                                            class="glyphicon glyphicon-log-out"></span><span
+                                            class="navbar-right">Logout</span></a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <div class="navbar-text">Sun. Dec. 25, 2016</div>
+                            </li>
+                        </ul>
 
-                        <div class="col-sm-10">
-                            <div class="row">
-                                Vetors Project
-                            </div>
-
-                            <div class="row">
-                                <span class="glyphicon glyphicon-time"></span>
-                                Due Tomorrow
-                            </div>
-                        </div>
                     </div>
 
-                </div>
 
-                <div class="col-sm-1">
-                    <div class="row">
-                    </div>
-                </div>
-
-                <!--<div class="col-sm-3">-->
-                    <!--<div class="upcomingPanel row">-->
-                        <!--Upcoming Quizzes/Tests-->
                     <!--</div>-->
-                <!--</div>-->
-
-                <div class="col-sm-1">
-                    <div class="row">
-                    </div>
-                </div>
-
-                <div class="col-sm-3">
-                    <div class="pointPanel row">
-                        Your Current Points - 1500
-                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="row sidebar">
+            dfgsfgdf
+        </div>
+        <div class="row sidebar">
+            <!--<div class="col-sm-1 ">-->
+            <!--<ul>-->
+            <!--<li class="homeIcon">-->
+            <!--<a href="/thankyou">-->
+            <!--<span class="glyphicon glyphicon-home"></span>-->
+            <!--</a>-->
+            <!--</li>-->
+
+            <!--<li class="homeIcon">-->
+            <!--<a href="/thankyou">-->
+            <!--<span class="glyphicon glyphicon-time"></span>-->
+            <!--</a>-->
+            <!--</li>-->
+
+            <!--<li class="homeIcon">-->
+            <!--<a href="/thankyou">-->
+            <!--<span class="glyphicon glyphicon-file"></span>-->
+            <!--</a>-->
+            <!--</li>-->
+
+            <!--<li class="homeIcon">-->
+            <!--<a href="/thankyou">-->
+            <!--<span class="glyphicon glyphicon-shopping-cart"></span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--</ul>-->
+            <!--</div>-->
+
+            <!--<div class="col-sm-7">-->
+            <!--<div class="row">-->
+            <!--<h1>-->
+            <!--Welcome back, John!-->
+            <!--</h1>-->
+            <!--</div>-->
+
+            <!--<div class="row">-->
+            <!--<h3>-->
+            <!--Here's an overview of how you're doing!-->
+            <!--</h3>-->
+            <!--</div>-->
+
+            <!--<div class="row"></div>-->
+
+            <!--<div class="col-sm-4">-->
+
+            <!--<table class="homeworkTable">-->
+            <!--<tr>-->
+            <!--<th>-->
+            <!--<p class="homeworkTableHeader">-->
+            <!--Homework Due Sooooooooooooooooooooooooooooooooooon-->
+            <!--</p>-->
+
+            <!--</th>-->
+            <!--</tr>-->
+            <!--<tr>-->
+            <!--<div class="col-sm-2">-->
+            <!--<span class="glyphicon glyphicon-alert"></span>-->
+            <!--</div>-->
+
+            <!--<div class="col-sm-10">-->
+            <!--<div class="row">-->
+            <!--Vetors Project-->
+            <!--</div>-->
+
+            <!--<div class="row">-->
+            <!--<span class="glyphicon glyphicon-exclamation-sign"></span>-->
+            <!--Due Tomorrow-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</tr>-->
+            <!--</table>-->
+
+            <!--<div class="row"> sdfads</div>-->
+
+            <!--<div class="row">asdfa</div>-->
+
+            <!--<div class="homeworkPanel row">-->
+            <!--<b>Homework Due Soon</b>-->
+            <!--</div>-->
+
+            <!--<div class="homeworkPanel row">-->
+            <!--<div class="col-sm-2">-->
+            <!--<span class="glyphicon glyphicon-alert"></span>-->
+            <!--</div>-->
+
+            <!--<div class="col-sm-10">-->
+            <!--<div class="row">-->
+            <!--Vetors Project-->
+            <!--</div>-->
+
+            <!--<div class="row">-->
+            <!--<span class="glyphicon glyphicon-time"></span>-->
+            <!--Due Tomorrow-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+
+            <!--</div>-->
+
+            <!--<div class="col-sm-1">-->
+            <!--<div class="row">-->
+            <!--</div>-->
+            <!--</div>-->
+
+            <!--&lt;!&ndash;<div class="col-sm-3">&ndash;&gt;-->
+            <!--&lt;!&ndash;<div class="upcomingPanel row">&ndash;&gt;-->
+            <!--&lt;!&ndash;Upcoming Quizzes/Tests&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+            <!--<div class="col-sm-1">-->
+            <!--<div class="row">-->
+            <!--</div>-->
+            <!--</div>-->
+
+            <!--<div class="col-sm-3">-->
+            <!--<div class="pointPanel row">-->
+            <!--Your Current Points - 1500-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</div>-->
+        </div>
+        <!--<div class="row">-->
+
+
     </div>
-    </body>
+
+
+    <!--<div class="navbar"></div>-->
+
+    <!--</div>-->
 
     <!--<style>-->
     <!--/*  bhoechie tab */-->
