--- a/imports/ui/home.html
+++ b/imports/ui/home.html
@@ -7,92 +7,153 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-1 ">
-                <ul>
-                    <li class="eagerIcon">
-                        <a href="/home">
-                            <img alt="Brand" src="../../public/images/EagerLogo.png">
-                        </a>
-                    </li>
-                    <li class="homeIcon">
-                        <a href="/thankyou">
-                            <span class="glyphicon glyphicon-home"></span>
-                        </a>
-                    </li>
-
-                    <li class="homeIcon">
-                        <a href="/thankyou">
-                            <span class="glyphicon glyphicon-time"></span>
-                        </a>
-                    </li>
-
-                    <li class="homeIcon">
-                        <a href="/thankyou">
-                            <span class="glyphicon glyphicon-file"></span>
-                        </a>
-                    </li>
-
-                    <li class="homeIcon">
-                        <a href="/thankyou">
-                            <span class="glyphicon glyphicon-shopping-cart"></span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-sm-11">
-                <div class="navbar navbar-default eaNavbar">
-                    <!--<div class="container-fluid">-->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                data-target=".navbar-collapse">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-
-                        <!--<a class="navbar-brand" href="#">-->
-                            <!--<img alt="Brand" src="../../public/images/EA_Logo.png">-->
-                        <!--</a>-->
-                    </div>
-
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="navbar-text"><span class="glyphicon glyphicon-bell"></span></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">John<b
-                                        class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li class="main-nav-link">
-                                        <a href="teacher-edit-info.html">
-                                    <span class="glyphicon glyphicon-wrench">
-                                    </span>
-                                            <span
-                                                    class="navbar-right">Settings
-                                    </span>
-                                        </a>
-                                    </li>
-                                    <li class="main-nav-link"><a href="teacher-edit-info.html"><span
-                                            class="glyphicon glyphicon-log-out"></span><span
-                                            class="navbar-right">Logout</span></a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <div class="navbar-text">Sun. Dec. 25, 2016</div>
-                            </li>
-                        </ul>
-
-                    </div>
-
-
-                    <!--</div>-->
+            <div class="col-sm-2 sidebar">
+                <div class="row sideBarItem">
+                    <a href="/home">
+                        <div class="row">
+                            <img alt="Brand" src="/images/EagerHat.png" width="125">
+                        </div>
+                        <div class="row">
+                            <!--<img alt="Brand2" src="/images/EagerText.png" width="100">-->
+                            Eager Academy
+                        </div>
+                    </a>
                 </div>
+
+                <div class="row sideBarItem">
+                    <a href="/thankyou">
+                        <div class="row">
+                            <span class="glyphicon glyphicon-home"></span>
+                        </div>
+                        <div class="row">
+                            Home
+                        </div>
+                    </a>
+                </div>
+
+                <div class="row sideBarItem">
+                    <a href="/thankyou">
+                        <div class="row">
+                            <span class="glyphicon glyphicon-time"></span>
+                        </div>
+                        <div class="row">
+                            Classes
+                        </div>
+                    </a>
+                </div>
+
+                <div class="row sideBarItem">
+                    <a href="/thankyou">
+                        <div class="row">
+                            <span class="glyphicon glyphicon-file"></span>
+                        </div>
+                        <div class="row">
+                            Assignments
+                        </div>
+                    </a>
+                </div>
+
+                <div class="row sideBarItem">
+                    <a href="/thankyou">
+                        <div class="row">
+                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                        </div>
+                        <div class="row">
+                            Store
+                        </div>
+                    </a>
+                </div>
+
+                <!--<ul>-->
+                <!--<li class="eagerIcon">-->
+                <!--<a href="/home">-->
+                <!--<img alt="Brand" src="/images/EagerHat.png" width="50" height="59">-->
+
+
+                <!--</a>-->
+                <!--</li>-->
+
+                <!--<li class="homeIcon">-->
+                <!--<a href="/thankyou">-->
+                <!--<span class="glyphicon glyphicon-home"></span>-->
+                <!--</a>-->
+                <!--</li>-->
+
+                <!--<li class="homeIcon">-->
+                <!--<a href="/thankyou">-->
+                <!--<span class="glyphicon glyphicon-time"></span>-->
+                <!--</a>-->
+                <!--</li>-->
+
+                <!--<li class="homeIcon">-->
+                <!--<a href="/thankyou">-->
+                <!--<span class="glyphicon glyphicon-file"></span>-->
+                <!--</a>-->
+                <!--</li>-->
+
+                <!--<li class="homeIcon">-->
+                <!--<a href="/thankyou">-->
+                <!--<span class="glyphicon glyphicon-shopping-cart"></span>-->
+                <!--</a>-->
+                <!--</li>-->
+                <!--</ul>-->
+            </div>
+            <div class="col-sm-10 eaNavbar">
+
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="navbar-text">
+                            <span class="glyphicon glyphicon-bell"></span>
+                        </li>
+
+                        <li class="dropdown navBarItem">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                John
+                                <b class="caret">
+
+                                </b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li class="main-nav-link">
+                                    <a href="teacher-edit-info.html">
+                                        <span class="glyphicon glyphicon-wrench"></span>
+                                        <span class="navbar-right">
+                                            Settings
+                                        </span>
+                                    </a>
+                                </li>
+
+                                <li class="main-nav-link">
+                                    <a href="teacher-edit-info.html">
+                                        <span class="glyphicon glyphicon-log-out"></span>
+                                        <span class="navbar-right">
+                                            Logout
+                                        </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="navBarItem">
+                            <div class="navbar-text">{{dateVar}}</div>
+                        </li>
+                    </ul>
+
+                </div>
+
+
             </div>
         </div>
 
-        <div class="row sidebar">
-            dfgsfgdf
-        </div>
-        <div class="row sidebar">
+        <div class="row">
             <!--<div class="col-sm-1 ">-->
             <!--<ul>-->
             <!--<li class="homeIcon">-->
