Working on register screen

--- a/imports/ui/login.html
+++ b/imports/ui/login.html
@@ -103,9 +103,16 @@
         <div class="row">
             <div class="col-xs-4">
             </div>
-            <div class="col-xs-2"><input type="checkbox">Remember Me</div>
+            <div class="col-xs-2">
+                <input type="checkbox">
+                Remember Me
+            </div>
             <div class="col-xs-2 text-right">
-                <a href="/forgot"><u>Forgot Password?</u></a>
+                <a href="/forgot">
+                    <u>
+                        Forgot Password?
+                    </u>
+                </a>
             </div>
             <div class="col-xs-4">
             </div>
