--- a/imports/ui/register.html
+++ b/imports/ui/register.html
@@ -1,46 +1,61 @@
 <template name="register">
-    <div class="loginForm">
-        <!--{{> atForm}}-->
-        <form class="login">
+    <head>
+        <title>
+            Eager Academy | Create Account
+        </title>
+    </head>
+    <div class="container-fluid">
+        <div class="row headerTitle">
+            <header>
+                <h1>
+                    Create an Eager Academy Account
+                </h1>
+            </header>
+        </div>
 
-            <div class="row">
-                <div class="col-xs-4">
+        <span class="row"></span>
+        <div class="loginForm">
+            <!--{{> atForm}}-->
+            <form class="login">
 
-                </div>
-                <div class="col-xs-6">
-                    <input type="text" name="username" placeholder="username/email"
-                           style="font-size:16pt;height:50px;width:450px;">
-                </div>
-                <div class="col-xs-2">
-                </div>
-            </div>
+                <div class="row">
+                    <div class="col-xs-4">
 
-            <div class="row top-buffer"></div>
+                    </div>
+                    <div class="col-xs-6">
+                        <input type="text" name="username" placeholder="username/email"
+                               style="font-size:16pt;height:50px;width:450px;">
+                    </div>
+                    <div class="col-xs-2">
+                    </div>
+                </div>
 
-            <div class="row">
-                <div class="col-xs-4">
-                </div>
-                <div class="col-xs-6">
-                    <input type="password" name="password" placeholder="password"
-                           style="font-size:16pt;height:50px;width:450px;">
-                </div>
-                <div class="col-xs-2">
-                </div>
-            </div>
+                <div class="row top-buffer"></div>
 
-            <div class="row top-buffer"></div>
+                <div class="row">
+                    <div class="col-xs-4">
+                    </div>
+                    <div class="col-xs-6">
+                        <input type="password" name="password" placeholder="password"
+                               style="font-size:16pt;height:50px;width:450px;">
+                    </div>
+                    <div class="col-xs-2">
+                    </div>
+                </div>
 
-            <div class="row">
-                <div class="col-xs-4">
-                </div>
-                <div class="col-xs-6">
-                    <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="registerButton">
-                </div>
-                <div class="col-xs-2">
-                </div>
-            </div>
+                <div class="row top-buffer"></div>
 
-        </form>
+                <div class="row">
+                    <div class="col-xs-4">
+                    </div>
+                    <div class="col-xs-6">
+                        <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="registerButton">
+                    </div>
+                    <div class="col-xs-2">
+                    </div>
+                </div>
+
+            </form>
+        </div>
     </div>
-
 </template>
