Login HTML displays dynamic now

--- a/imports/ui/login.html
+++ b/imports/ui/login.html
@@ -1,123 +1,89 @@
 <template name="login">
-    <style>
-        h1 {
-            text-align: center;
-        }
-
-        p {
-            text-align: center;
-        }
-
-        .txtField {
-            font-size: 18pt;
-            height: 420px;
-            width: 200px;
-        }
-
-        .top-buffer {
-            margin-top: 15px;
-        }
-    </style>
-
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <div class="container">
+    <div class="container-fluid">
+
+        <div class="row top-buffer"></div>
+        <div class="row top-buffer"></div>
+        <div class="row top-buffer"></div>
+        <div class="row top-buffer"></div>
+        <div class="row top-buffer"></div>
+        <div class="row top-buffer"></div>
+        <div class="row top-buffer"></div>
+
+
+
+
         <div class="row">
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
-            <div class="row top-buffer"></div>
+            <span class="col-xs-3"></span>
 
-            <div class="col-xs-2"></div>
-
-            <div class="col-xs-8">
+            <span class="col-xs-6 loginHeader">
                 <header>
                     <h1>
                         Login to your Eager Academy Account
                     </h1>
                 </header>
-            </div>
+                <hr>
+            </span>
 
-            <div class="col-xs-2"></div>
+            <span class="col-xs-3"></span>
         </div>
+
 
         <div class="row">
-            <div class="col-xs-12">
-                <hr>
-            </div>
+            <span class="col-xs-4"></span>
+
+            <span class="col-xs-4 usernameField">
+                <input type="text" name="username" placeholder="Username/E-Mail">
+            </span>
+
+            <span class="col-xs-4"></span>
         </div>
-
-        <form class="loginForm" id="loginForm">
-
-            <div class="row">
-                <div class="col-xs-4">
-
-                </div>
-                <div class="col-xs-6">
-                    <input type="text" name="username" placeholder="username/email"
-                           style="font-size:16pt;height:50px;width:450px;">
-                </div>
-                <div class="col-xs-2">
-                </div>
-            </div>
-
-            <div class="row top-buffer"></div>
-
-            <div class="row">
-                <div class="col-xs-4">
-                </div>
-                <div class="col-xs-6">
-                    <input type="password" name="password" placeholder="password"
-                           style="font-size:16pt;height:50px;width:450px;">
-                </div>
-                <div class="col-xs-2">
-                </div>
-            </div>
-
-            <div class="row top-buffer"></div>
-
-            <div class="row">
-                <div class="col-xs-4">
-                </div>
-                <div class="col-xs-6">
-                    <input type="submit" style="font-size:16pt;height:50px;width:450px;" class="loginButton">
-
-                </div>
-                <div class="col-xs-2">
-                </div>
-            </div>
-
-        </form>
 
         <div class="row top-buffer"></div>
 
         <div class="row">
-            <div class="col-xs-4">
-            </div>
-            <div class="col-xs-2">
+            <span class="col-xs-4"></span>
+
+            <span class="col-xs-4 passwordField">
+                <input type="password" name="password" placeholder="Password">
+            </span>
+
+            <span class="col-xs-4"></span>
+        </div>
+
+        <div class="row top-buffer"></div>
+
+        <div class="row">
+            <span class="col-xs-4"></span>
+
+            <span class="col-xs-4 loginButton">
+                <input type="submit">
+            </span>
+
+            <span class="col-xs-4"></span>
+        </div>
+
+        <div class="row top-buffer"></div>
+
+        <div class="row">
+            <span class="col-xs-4"></span>
+
+            <span class="col-xs-2 rememberButton">
                 <input type="checkbox">
                 Remember Me
-            </div>
-            <div class="col-xs-2 text-right">
+            </span>
+
+            <span class="col-xs-2 text-right forgotButton">
                 <a href="/forgot">
                     <u>
                         Forgot Password?
                     </u>
                 </a>
-            </div>
-            <div class="col-xs-4">
-            </div>
+            </span>
+
+            <span class="col-xs-4"></span>
         </div>
     </div>
-
-
 </template>
