Created Homework Due Soon Panel

--- a/imports/ui/home.html
+++ b/imports/ui/home.html
@@ -47,6 +47,7 @@
         </div>
 
 
+        {{> table}}
         <!--<div class="row">-->
         <!--<div class="col-sm-2 sidebar">-->
         <!--<div class="row sideBarItem">-->
