--- a/imports/ui/table.html
+++ b/imports/ui/table.html
@@ -1,14 +1,87 @@
 <template name="table">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
         <div class="row homeworkTable">
             <div class="row homeworkTableHeader">
                 Homework Due Soon
             </div>
 
-            <div class="row numberCircle">
+            <div class="row homeworkItem">
+
+                <div class="col-sm-3">
+                    <div class="row numberCircle">
                 <span class="glyphicon glyphicon-ok">
 
                 </span>
+                    </div>
+                </div>
+
+                <span class="col-sm-1">
+
+                </span>
+
+                <div class="col-sm-8">
+                    <div class="row homeworkLabel">
+                        Vectors Project
+                    </div>
+                    <div class="row homeworkDeadline">
+                    <span class="glyphicon glyphicon-time">
+
+                    </span>
+                        Due Tomorrow
+                    </div>
+                </div>
+            </div>
+
+            <div class="row homeworkItem">
+
+                <div class="col-sm-3">
+                    <div class="row numberCircle">
+                        <i class="fa fa-exclamation"></i>
+                    </div>
+                </div>
+
+                <span class="col-sm-1">
+
+                </span>
+
+                <div class="col-sm-8">
+                    <div class="row homeworkLabel">
+                        Vectors Worksheet
+                    </div>
+                    <div class="row homeworkDeadline">
+                    <span class="glyphicon glyphicon-time">
+
+                    </span>
+                        Due Tomorrow
+                    </div>
+                </div>
+            </div>
+
+            <div class="row homeworkItem">
+
+                <div class="col-sm-3">
+                    <div class="row numberCircle">
+                <span class="glyphicon glyphicon-remove">
+
+                </span>
+                    </div>
+                </div>
+
+                <span class="col-sm-1">
+
+                </span>
+
+                <div class="col-sm-8">
+                    <div class="row homeworkLabel">
+                        Vectors Worksheet
+                    </div>
+                    <div class="row homeworkDeadline">
+                    <span class="glyphicon glyphicon-time">
+
+                    </span>
+                        Due Tomorrow
+                    </div>
+                </div>
             </div>
         </div>
     </div>
